Slider : Index and nav arrows won't show anymore if there is only 1 image. Card : fixed height on mobile.

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -14,14 +14,12 @@
     background-color: black;
     &:hover{
         width: 101%;
-        // height: 101%;
         box-shadow: 0px 0px 25px 5px rgba($kasa-main-color, 0.9);
         transition: 0.25s;
         }
         figcaption{
-            width: 100%;
+        width: 100%;
         height: 20%;
-        // background-color: rgba(255, 96, 96, 0.1);
         border-radius: 0 0 10px 10px;
         color: white;
         font-size: 18px;
@@ -46,10 +44,9 @@
             align-items: flex-end;
             border-radius: 10px;
             width: 100%;
-            height: auto;
             margin: auto;
             position: relative;
             justify-content: flex-end;
-            background-color: black; 
+            background-color: black;
     }    
 } 
